# docling-core

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  pyproject.toml
.github/: mergify.yml
.github/workflows/: cd.yml  checks.yml  ci.yml
docling_core/chunker/: __init__.py  hierarchical_chunker.py
docling_core/cli/: view.py
docling_core/experimental/serializer/: common.py  doctags.py  markdown.py
docling_core/search/: json_schema_to_search_mapper.py  meta.py  package.py
docling_core/transforms/chunker/: __init__.py  base.py  hierarchical_chunker.py  hybrid_chunker.py  token_aware_chunker.py
docling_core/transforms/id_generator/: __init__.py  base.py  doc_hash_id_generator.py  uuid_generator.py
docling_core/transforms/metadata_extractor/: __init__.py  base.py  simple_metadata_extractor.py
docling_core/transforms/serializer/: __init__.py  base.py  common.py  markdown.py  standard.py
docling_core/types/: __init__.py  base.py
docling_core/types/doc/: __init__.py  base.py  doc_ann.py  doc_ocr.py  doc_raw.py  document.py  labels.py  page.py  tokens.py  utils.py
docling_core/types/experimental/: __init__.py  base.py  document.py  labels.py
docling_core/types/legacy/: base.py  doc_ann.py  doc_ocr.py  doc_raw.py  document.py
docling_core/types/legacy_doc/: base.py  document.py
docling_core/types/newdoc/: base.py  document.py
docling_core/types/rec/: attribute.py  predicate.py  record.py  statement.py  subject.py
docling_core/utils/: ds_generate_docs.py  ds_generate_jsonschema.py  file.py  generate_docs.py  legacy.py  validate.py  validators.py
docs/: DoclingDocument.json  Document.json  Document.md  Generic.json  Generic.md  Record.json  Record.md
examples/: serialization.ipynb  utils.py
test/: test_base.py  test_chunk.py  test_collection.py  test_doc_base.py  test_doc_legacy_convert.py  test_doc_schema.py  test_doc_schema_extractor.py  test_docling_doc.py  test_doctags_load.py  test_export_to_html.py  test_hierarchical_chunker.py  test_hybrid_chunker.py  test_json_schema_to_search_mapper.py  test_markdown_serializer.py  test_newdoc.py  test_nlp_qa.py  test_otsl_table_export.py  test_rec_schema.py  test_search_meta.py  test_token_aware_chunker.py  test_utils.py
test/data/chunker/: 0_inp_dl_doc.json  0_out_chunks.json  0_out_chunks_heading_in_meta_with_extras.json  0_out_chunks_heading_in_meta_wout_extras.json  0_out_chunks_heading_in_text_with_extras.json  0_out_chunks_heading_in_text_wout_extras.json  0_out_chunks_with_meta_incl_heading.json  1_out_chunks.json  2_inp_dl_doc.json  2a_out_chunks.json  2a_out_ser_chunks.json  2b_out_chunks.json  2c_out_chunks.json  2d_out_ser_chunks.json
test/data/doc/: 2206.01062.yaml  2206.01062.yaml.dt  2206.01062.yaml.et  2206.01062.yaml.html  2206.01062.yaml.md  bad_doc.yaml.dt  bad_doc.yaml.et  bad_doc.yaml.html  bad_doc.yaml.md  constructed_doc.dt  constructed_doc.dt.gt  constructed_doc.embedded.html.gt  constructed_doc.embedded.json.gt  constructed_doc.embedded.md.gt  constructed_doc.embedded.yaml.gt  constructed_doc.placeholder.html.gt  constructed_doc.placeholder.md.gt  constructed_doc.referenced.html.gt  constructed_doc.referenced.json.gt  constructed_doc.referenced.md.gt  constructed_doc.referenced.yaml.gt  constructed_doc_orig.embedded.html  constructed_doc_ref.referenced.html  constructed_doc_ref.referenced.md  constructed_document.yaml.dt  constructed_document.yaml.et  constructed_document.yaml.html  constructed_document.yaml.md  doc-2.json  doc-4.json  doc-6.json  doc-8.json  doc-8.json_table_0.doctags.txt  doc-export.doctags.txt  doc-export.md  dummy_doc.yaml  dummy_doc.yaml.dt  dummy_doc.yaml.et  dummy_doc.yaml.html  dummy_doc.yaml.md  (+10 more)
test/data/experimental/: 2206.01062.experimental.yaml  dummy_doc.yaml
test/data/json_schemas/: base_identifier.json  base_log.json  dbrecord-ref.json  document-ref.json
(+65 files in other folders)
